Replace queryForObject(...) with query(...)